--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ python = "^3.8"
 aiosqlite = "^0.15.0"
 asyncio = "^3.4.3"
 aiohttp = "^3.6.2"
+alembic = "^1.4.2"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
