--- a/alembic.ini
+++ b/alembic.ini
@@ -35,7 +35,7 @@ script_location = migrations
 # are written from script.py.mako
 # output_encoding = utf-8
 
-sqlalchemy.url = sqlite://data/sceptre.db
+sqlalchemy.url =  sqlite:///data/sceptre.db
 
 
 # Logging configuration
